** New: Unit HP tracking in various applications will now be tracked even when not selected by a raid/group memeber.
** New: Major increase in Unit HP tracking effeciency and accuracy.
** Note: The above changes should be most notable in the Phase Monitors percentage based objectives.
** Note: Tracked Units will need to be "seen" at least once by the raid/group. This is an API restriction.

Records
* Fixed: Dates were not correctly being recorded.

Hammerknell
* Inwar Darktide
** New: Added Timer for the appearance of the first Geyser in Phase 2.
** New: Added Timer for the appearance of all subsequent Geysers in Phase 2 and Phase 3.
* Akylios
** New: Added fail-safe trigger for phase 4. Damage to Jornaru should now trigger P4 if Akylios is submerged.
** Note: Accuracy of timers triggered this way will be dependent on reaction times to damaging Jornaru.
** Note: But should be less inaccurate than when P4 hits early during submerge phases.

Drowned Halls
* Isskal
** New: Added stop trigger to alert for Ice Shard interrupts.

Expert Dungeons
* Added more Unique ID's to Expert bosses.
* Kings Breach
** Autoch & Mondrach
*** Fixed: Saved data wasn't being recorded correctly.

German Translations
* Added: Non-critical translations for Phase Monitor and in-game chat.

----
v0.9.7

Rift Version
* New: Compatible with Rift v1.7

Record Times
* New: Added a date recorder to record times. (Will only effect new records)

Options
* New: Options down the left panel are now separated in to two sections.
* New: Added KBM tab to top section for Global Options.
* New: Added Plug-In tab to top section for all Plug-In settings.
* New: Added Raid tab (red helm) to lower section for all 20-man instances.
* New: Added Sliver tab (silver helm) to lower section for all 10-man instances.
* New: Added Master tab (blue helm) to lower section for Master Mode dungeons.
* New: Added Group tab (gold helm) to lower section for Expert dungeons.
* Alerts